--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 
             <div class="header-list-big">
                 <ul>
-                <li><a href="aboutsite.html">このサイトについて</a></li>
-                <li><a href="guzzu.html">グッズ</a></li>
-                <li><a href="other.html">その他</a></li>
+                <li><a href="other.html">other</a></li>
+                <li><a href="guzzu.html">merchandise</a></li>
+                <li><a href="aboutsite.html">about as</a></li>
                 </ul>
             </div>
 
@@ -45,16 +45,16 @@
 
             <div class="header-list-small">
                 <ul>
-                <li id="li-first"><a href="aboutsite.html">このサイトについて</a></li>
-                <li><a href="guzzu.html">グッズ</a></li>
-                <li><a href="other.html">その他</a></li>
+                <li id="li-first"><a href="other.html">other</a></li>
+                <li><a href="guzzu.html">merchandise</a></li>
+                <li><a href="aboutsite.html">about as</a></li>
                 </ul>
             </div>
 
         </div>
 
         <div class="intro">
-            <p>Welcome to RinatanArt.   I hope you will have a great time.</p>
+            <p>Welcome to RinatanArt.   I hope you will have a happy time.</p>
         </div>
 
         <!--ヘッダー終了-->
@@ -87,7 +87,7 @@
 
         <!--news-->
         <div class="news_part">
-            <p>2022年 3月29日更新『fashion』</p>
+            <p>『fashion』Update on March 29, 2022</p>
         </div>
         <!--news-->
 
