--- a/aboutsite.html
+++ b/aboutsite.html
@@ -31,9 +31,9 @@
 
             <div class="header-list-big">
                 <ul>
-                <li><a href="aboutsite.html">このサイトについて</a></li>
-                <li><a href="guzzu.html">グッズ</a></li>
-                <li><a href="other.html">その他</a></li>
+                <li><a href="other.html">other</a></li>
+                <li><a href="guzzu.html">merchandise</a></li>
+                <li><a href="aboutsite.html">about as</a></li>
                 </ul>
             </div>
 
@@ -48,9 +48,9 @@
 
             <div class="header-list-small">
                 <ul>
-                <li id="li-first"><a href="aboutsite.html">このサイトについて</a></li>
-                <li><a href="guzzu.html">グッズ</a></li>
-                <li><a href="other.html">その他</a></li>
+                <li id="li-first"><a href="other.html">other</a></li>
+                <li><a href="guzzu.html">merchandise</a></li>
+                <li><a href="aboutsite.html">about as</a></li>
                 </ul>
             </div>
 
