--- a/redart.html
+++ b/redart.html
@@ -18,43 +18,41 @@
 
 <body>
 
-        <!--ヘッダー部分-->
-        <div class="header-big">
+    <!--ヘッダー部分-->
+    <div class="header-big">
 
-            <div class="header-logo-big">
-            <p><a href="index.html">RinatanArt</a></p>
-            </div>
-
-
-            <div class="header-list-big">
-                <ul>
-                <li><a href="aboutsite.html">このサイトについて</a></li>
-                <li><a href="guzzu.html">グッズ</a></li>
-                <li><a href="other.html">その他</a></li>
-                </ul>
-            </div>
-
-        </div>
-
-        <div class="header-small">
-
-            <div class="header-logo-small">
-                <p><a href="index.html">RinatanArt</a></p>
-            </div>
-
-
-            <div class="header-list-small">
-                <ul>
-                    <li id="li-first"><a href="aboutsite.html">このサイトについて</a></li>
-                    <li><a href="guzzu.html">グッズ</a></li>
-                    <li><a href="other.html">その他</a></li>
-                </ul>
-            </div>
-
+        <div class="header-logo-big">
+        <p><a href="index.html">RinatanArt</a></p>
         </div>
 
 
-        <!--ヘッダー終了-->
+        <div class="header-list-big">
+            <ul>
+            <li><a href="other.html">other</a></li>
+            <li><a href="guzzu.html">merchandise</a></li>
+            <li><a href="aboutsite.html">about as</a></li>
+            </ul>
+        </div>
+
+    </div>
+
+    <div class="header-small">
+
+        <div class="header-logo-small">
+        <p><a href="index.html">RinatanArt</a></p>
+        </div>
+
+
+        <div class="header-list-small">
+            <ul>
+            <li id="li-first"><a href="aboutsite.html">other</a></li>
+            <li><a href="guzzu.html">merchandise</a></li>
+            <li><a href="aboutsite.html">about as</a></li>
+            </ul>
+        </div>
+
+    </div>
+    <!--ヘッダー終了-->
 
 
     <div class="header2"  style="background-color: rgba(255,127,127,0.2); ">
