--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="header-big">
 
             <div class="header-logo-big">
-            <p><a href="index.html">RinatanArt</a></p>
+            <p><a href="index.html">RinArt</a></p>
             </div>
 
 
@@ -39,7 +39,7 @@
         <div class="header-small">
 
             <div class="header-logo-small">
-            <p><a href="index.html">RinatanArt</a></p>
+            <p><a href="index.html">RinArt</a></p>
             </div>
 
 
@@ -163,13 +163,17 @@
 
         </div>
 
-        <!--
-        <div id=footer>
-            <p>ここはエンディング</p>
+    
+        <br>
+        <br>
+
+        <div id="footer">
+            <div id="footer-main">
+              <h1>Instagram</h1>
+              <h1>Sign</h1>
+            </div>
         </div>
-        -->
-
-
+        
 
     </body>
 
